--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Bot for your Day</title>
+    <link rel="stylesheet" href="style.css" />
     <script
       defer
       src="https://unpkg.com/react@17/umd/react.production.min.js"
@@ -21,7 +22,7 @@
   <body>
     <h1>Weather Bot</h1>
     <p>By Blade and Andrew</p>
-    <div id="react-root">
+    <div id="react-root" class="app-container">
       <noscript
         >This is a Javascript application, and it looks like Javascript is not
         enabled in this browser. Please enable it to use this
