--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css" />
     <script
       defer
-      src="https://unpkg.com/react@17/umd/react.production.min.js"
+      src="https://unpkg.com/react@17/umd/react.development.js"
       crossorigin
     ></script>
     <script
       defer
-      src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
+      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
       crossorigin
     ></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
