--- a/index.html
+++ b/index.html
@@ -5,19 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Bot for your Day</title>
-    <link rel="stylesheet" href="style.css" />
-    <script
-      defer
-      src="https://unpkg.com/react@17/umd/react.development.js"
-      crossorigin
-    ></script>
-    <script
-      defer
-      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
-      crossorigin
-    ></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script src="/index.js" type="text/babel"></script>
+    <link rel="stylesheet" href="/style.css" />
+    <script type="module" src="/index.js" type="text/babel"></script>
   </head>
   <body>
     <h1>Weather Bot</h1>
